sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/Funder_Roles__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Accounts and Opportunities that Associates Opportunites w/ Funders</description>
    <label>Funder Role</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Funder Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funder Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>