sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Looksup to Accounts</description>
    <inlineHelpText>Who is the Funder for this Opportunity?</inlineHelpText>
    <label>Funder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funder Role</relationshipLabel>
    <relationshipName>Funder_Role</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>