sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/Account_Program__c.field-meta.xml
<CustomField>
    <fullName>Account_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Program</label>
    <referenceTo>Account_Program__c</referenceTo>
    <relationshipLabel>Funder Roles</relationshipLabel>
    <relationshipName>Funder_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>