sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The day the funding Ends</description>
    <inlineHelpText>When will this funding end?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>