sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/Funding_Category__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category__c</fullName>
    <description>Picklist value for Funding Category by Donor</description>
    <inlineHelpText>Which Category is this funding?</inlineHelpText>
    <label>Funding Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Cost</fullName>
            </value>
            <value>
                <fullName>Full Toilet Cost</fullName>
            </value>
            <value>
                <fullName>Partial Toilet Cost</fullName>
            </value>
            <value>
                <fullName>Product Sales Cost</fullName>
            </value>
            <value>
                <fullName>FLI Labor Costs</fullName>
            </value>
            <value>
                <fullName>Sales- Full</fullName>
            </value>
            <value>
                <fullName>Sales- Partial</fullName>
            </value>
            <value>
                <fullName>Field Support- Full</fullName>
            </value>
            <value>
                <fullName>Field Support- Partial</fullName>
            </value>
            <value>
                <fullName>M&amp;E- Full</fullName>
            </value>
            <value>
                <fullName>M&amp;E- Partial</fullName>
            </value>
            <value>
                <fullName>Paint Kit- Full</fullName>
            </value>
            <value>
                <fullName>Paint Kit - Partial</fullName>
            </value>
            <value>
                <fullName>Re Paint Kit - Full</fullName>
            </value>
            <value>
                <fullName>Re Paint Kit - Partial</fullName>
            </value>
            <value>
                <fullName>Marketing Kit - Full</fullName>
            </value>
            <value>
                <fullName>Marketing Kit - Partial</fullName>
            </value>
            <value>
                <fullName>Hygiene Promotion - Full</fullName>
            </value>
            <value>
                <fullName>Hygiene Promotion - Partial</fullName>
            </value>
            <value>
                <fullName>Toilet Cost - Full</fullName>
            </value>
            <value>
                <fullName>Toilet Cost - Partial</fullName>
            </value>
            <value>
                <fullName>Renewal - Full</fullName>
            </value>
            <value>
                <fullName>Renewal - Partial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shower</fullName>
            </value>
            <value>
                <fullName>Privacy Barrier</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>