sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Description for this funding</description>
    <inlineHelpText>Provide a description for this funding</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>