sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Opportunity Name</description>
    <inlineHelpText>Whats the Name of this Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funder Role</relationshipLabel>
    <relationshipName>Funder_Role</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>