sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The day the funding will start</description>
    <inlineHelpText>When will this funding start?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>