sfSandBoxCode/force-app/main/default/objects/Funder_Roles__c/validationRules/Check_if_Account_is_OXFAM.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_if_Account_is_OXFAM</fullName>
    <active>true</active>
    <description>Requires a Start and End Date if Funder is Oxfam of Forward Foundation</description>
    <errorConditionFormula>AND(CONTAINS(Account__c ,&quot;OXFAM&quot;), ISBLANK(Start_Date__c))</errorConditionFormula>
    <errorMessage>Please Enter a Start and End Date for this Financing</errorMessage>
</ValidationRule>